cache shuffle descriptors