@@ -51,6 +51,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.Function;
 
 /**
  * Factory of {@link TaskDeploymentDescriptor} to deploy {@link
@@ -64,7 +65,9 @@ public class TaskDeploymentDescriptorFactory {
     private final JobID jobID;
     private final PartitionLocationConstraint partitionDeploymentConstraint;
     private final int subtaskIndex;
-    private final List<List<IntermediateResultPartition>> consumedPartitions;
+    private final List<ConsumedPartitionGroup> consumedPartitionGroups;
+    private final Function<IntermediateResultPartitionID, IntermediateResultPartition>
+            partitionRetriever;
 
     private TaskDeploymentDescriptorFactory(
             ExecutionAttemptID executionId,
@@ -74,7 +77,9 @@ public class TaskDeploymentDescriptorFactory {
             JobID jobID,
             PartitionLocationConstraint partitionDeploymentConstraint,
             int subtaskIndex,
-            List<List<IntermediateResultPartition>> consumedPartitions) {
+            List<ConsumedPartitionGroup> consumedPartitionGroups,
+            Function<IntermediateResultPartitionID, IntermediateResultPartition>
+                    partitionRetriever) {
         this.executionId = executionId;
         this.attemptNumber = attemptNumber;
         this.serializedJobInformation = serializedJobInformation;
@@ -82,7 +87,8 @@ public class TaskDeploymentDescriptorFactory {
         this.jobID = jobID;
         this.partitionDeploymentConstraint = partitionDeploymentConstraint;
         this.subtaskIndex = subtaskIndex;
-        this.consumedPartitions = consumedPartitions;
+        this.consumedPartitionGroups = consumedPartitionGroups;
+        this.partitionRetriever = partitionRetriever;
     }
 
     public TaskDeploymentDescriptor createDeploymentDescriptor(
@@ -103,14 +109,14 @@ public class TaskDeploymentDescriptorFactory {
     }
 
     private List<InputGateDeploymentDescriptor> createInputGateDeploymentDescriptors() {
-        List<InputGateDeploymentDescriptor> inputGates = new ArrayList<>(consumedPartitions.size());
+        List<InputGateDeploymentDescriptor> inputGates =
+                new ArrayList<>(consumedPartitionGroups.size());
 
-        for (List<IntermediateResultPartition> partitions : consumedPartitions) {
-            // If the produced partition has multiple consumers registered, we
-            // need to request the one matching our sub task index.
-            // TODO Refactor after removing the consumers from the intermediate result partitions
-            IntermediateResultPartition resultPartition = partitions.get(0);
+        for (ConsumedPartitionGroup consumedPartitionGroup : consumedPartitionGroups) {
+            IntermediateResultPartition resultPartition =
+                    getIntermediateResultPartition(consumedPartitionGroup.getFirst());
 
+            // All partitions in the same ConsumedPartitionGroup have the same consumers
             int numConsumers = resultPartition.getConsumers().get(0).size();
 
             int queueToRequest = subtaskIndex % numConsumers;
@@ -123,41 +129,65 @@ public class TaskDeploymentDescriptorFactory {
                             resultId,
                             partitionType,
                             queueToRequest,
-                            getConsumedPartitionShuffleDescriptors(partitions)));
+                            getConsumedPartitionShuffleDescriptors(consumedPartitionGroup)));
         }
 
         return inputGates;
     }
 
     private ShuffleDescriptor[] getConsumedPartitionShuffleDescriptors(
-            List<IntermediateResultPartition> partitions) {
+            ConsumedPartitionGroup consumedPartitionGroup) {
 
-        ShuffleDescriptor[] shuffleDescriptors = new ShuffleDescriptor[partitions.size()];
-        // Each edge is connected to a different result partition
-        for (int i = 0; i < partitions.size(); i++) {
-            shuffleDescriptors[i] =
-                    getConsumedPartitionShuffleDescriptor(
-                            partitions.get(i), partitionDeploymentConstraint);
+        final IntermediateResult consumedIntermediateResult =
+                getIntermediateResultPartition(consumedPartitionGroup.getFirst())
+                        .getIntermediateResult();
+
+        // currently one result can have exactly one consumer job vertex
+        final int consumerIndex = 0;
+
+        if (consumedIntermediateResult.isShuffleDescriptorsCacheEnabledFor(consumerIndex)) {
+            final ShuffleDescriptor[] cachedShuffleDescriptors =
+                    consumedIntermediateResult.getCachedShuffleDescriptors(consumerIndex);
+            if (cachedShuffleDescriptors != null) {
+                return cachedShuffleDescriptors;
+            } else {
+                final ShuffleDescriptor[] shuffleDescriptors =
+                        buildConsumedPartitionShuffleDescriptors(consumedPartitionGroup);
+                consumedIntermediateResult.cacheShuffleDescriptors(
+                        consumerIndex, shuffleDescriptors);
+                return shuffleDescriptors;
+            }
+        } else {
+            return buildConsumedPartitionShuffleDescriptors(consumedPartitionGroup);
         }
+    }
+
+    private ShuffleDescriptor[] buildConsumedPartitionShuffleDescriptors(
+            ConsumedPartitionGroup consumedPartitionGroup) {
+
+        final ShuffleDescriptor[] shuffleDescriptors =
+                new ShuffleDescriptor[consumedPartitionGroup.size()];
+
+        int i = 0;
+        for (IntermediateResultPartitionID partitionId : consumedPartitionGroup) {
+            shuffleDescriptors[i++] =
+                    getConsumedPartitionShuffleDescriptor(
+                            getIntermediateResultPartition(partitionId),
+                            partitionDeploymentConstraint);
+        }
+
         return shuffleDescriptors;
+    }
+
+    private IntermediateResultPartition getIntermediateResultPartition(
+            IntermediateResultPartitionID intermediateResultPartitionId) {
+        return partitionRetriever.apply(intermediateResultPartitionId);
     }
 
     public static TaskDeploymentDescriptorFactory fromExecutionVertex(
             ExecutionVertex executionVertex, int attemptNumber) throws IOException {
         InternalExecutionGraphAccessor internalExecutionGraphAccessor =
                 executionVertex.getExecutionGraphAccessor();
-
-        final List<List<IntermediateResultPartition>> consumedPartitions = new ArrayList<>();
-
-        for (ConsumedPartitionGroup partitionGroup :
-                executionVertex.getAllConsumedPartitionGroups()) {
-            List<IntermediateResultPartition> partitions = new ArrayList<>();
-            for (IntermediateResultPartitionID partitionId : partitionGroup) {
-                partitions.add(
-                        internalExecutionGraphAccessor.getResultPartitionOrThrow(partitionId));
-            }
-            consumedPartitions.add(partitions);
-        }
 
         return new TaskDeploymentDescriptorFactory(
                 executionVertex.getCurrentExecutionAttempt().getAttemptId(),
@@ -168,7 +198,8 @@ public class TaskDeploymentDescriptorFactory {
                 internalExecutionGraphAccessor.getJobID(),
                 internalExecutionGraphAccessor.getPartitionLocationConstraint(),
                 executionVertex.getParallelSubtaskIndex(),
-                consumedPartitions);
+                executionVertex.getAllConsumedPartitionGroups(),
+                id -> internalExecutionGraphAccessor.getResultPartitionOrThrow(id));
     }
 
     private static MaybeOffloaded<JobInformation> getSerializedJobInformation(
